fixed splash page display flex-wrap justify-contend space between, last row

--- a/app/assets/stylesheets/api/playcontrols.scss
+++ b/app/assets/stylesheets/api/playcontrols.scss
@@ -8,6 +8,7 @@
     width: 100%;
     background-color: #f2f2f2;
     border-top: 1px solid #cecece ;
+    z-index: 100;
 }
 
 audio {
